--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -183,6 +183,12 @@
   box-sizing: border-box;
 }
 
+@media (max-width: 768px) {
+  .copyrightText {
+    margin-bottom: 55px;
+  }
+}
+
 @media (max-width: 991px) {
   .footer {
     padding: 40px;
