--- a/src/pages/Privacy.css
+++ b/src/pages/Privacy.css
@@ -1,5 +1,5 @@
 .privacy-section {
-  margin: 0 5rem;
+  margin: 2.5rem 5rem;
 }
 .privacy-main-heading-text {
   display: -webkit-box;
@@ -28,7 +28,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 300;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 28px;
   color: #000000;
   text-align: center;
@@ -51,39 +51,87 @@
 }
 .privacy-heading-text h1 {
   text-align: center;
+  font-weight: bold;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  margin-top: .5rem;
 }
 
 .privacy-heading-text p {
   font-family: "Roboto";
   font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
+  font-weight: 300;
+  font-size: 20px;
   line-height: 21px;
   color: #000000;
+}
+
+@media only screen and (max-width: 1200px){
+  .privacy-main-heading-text h1 {
+    font-weight: 700;
+  }
+}
+
+@media only screen and (max-width: 768px){
+  .privacy-section{
+    margin: 2rem 1.5rem;
+  }
+  .marginBottom{
+    margin-bottom: 120px;
+  }
+
+  .privacy-main-heading-text h1 {
+    font-weight: 700;
+    margin-bottom: 1.3rem;
+  }
+  .privacy-heading-text h1{
+    margin-top: 1.3rem;
+    font-size: 1.6rem;
+    font-weight: 700;
+  }
+  .privacy-main-heading-text p {
+    font-size: 17px;
+  }
 }
 
 @media only screen and (max-width: 500px) {
   .privacy-main-heading-text h1 {
     font-family: "Montserrat";
     font-style: normal;
-    font-weight: 800;
-    font-size: 30px;
+    font-weight: 600;
+    font-size: 36px;
     line-height: 49px;
     color: #000000;
+    margin-top: 1.3rem;
   }
   .privacy-main-heading-text p {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 300;
-    font-size: 18px;
-    line-height: 25px;
+    font-size: 17px;
+    line-height: 24px;
     color: #000000;
     text-align: left;
   }
+  .privacy-heading-text p{
+    font-size: 16px;
+  }
   .privacy-heading-text h1 {
     text-align: left;
+    font-weight: 600;
+    font-size: 26px;
   }
   .privacy-section {
     margin: 0 1rem;
+  }
+}
+
+@media  screen and (max-width: 375px) {
+
+  .privacy-main-heading-text h1 {
+    font-size: 33px;
+  }
+  .privacy-heading-text h1 {
+    font-size: 23px;
   }
 }
