--- a/src/pages/ParticularCategory.css
+++ b/src/pages/ParticularCategory.css
@@ -141,6 +141,29 @@
   font-family: "Ubuntu";
 }
 
+.product-main-wrapper{
+  box-shadow: 0px 0px 3px black;
+  overflow: hidden;
+  line-height: 1.3rem;
+  text-decoration: none;
+  width: 251px;
+  height: 399px;
+  padding: 15px;
+  color: black;
+  margin: 10px 20px 20px 20px;
+  border-radius: 10px;
+}
+.button-size{
+  border: 2px solid #dadada;
+  background-color: white;
+  color: black;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 13px;
+  padding: 0px 3px;
+  height: 20px;
+}
 @media screen and (max-width: 1024px) {
   .category-page-wrapper {
     display: -webkit-box;
