--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,3 +1,46 @@
+.skeleton{
+  display: flex;
+  justify-content: center;
+  height: 460px;
+  margin: 1rem;
+  flex: 0.5;
+  text-align: center;
+  background: white;
+  border-radius: 10px;
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+  padding: 1rem;
+}
+
+@media only screen and (max-width: 320px) {
+  .skeleton{
+    flex-direction: column !important;
+  
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .skeleton{
+    flex-direction: column !important;
+    align-items: center !important;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
+  .skeleton{
+    flex-direction: row;
+    /* align-items: center !important; */
+    flex-wrap: wrap;
+    height: auto;
+    padding: 0;
+    margin: 5px;
+  }
+}
+
+
+
+/*---------Upper is skeleton section ----------------*/
+
 .homepage-wrapper {
   overflow-x: hidden;
 }
